@@ -1,8 +1,8 @@
 # --
 # AdminSysConfig.dtl - provides HTML form for AdminSysConfig html
-# Copyright (C) 2001-2006 OTRS GmbH, http://otrs.org/
+# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
 # --
-# $Id: AdminSysConfig.dtl,v 1.12 2006-10-05 01:18:29 martin Exp $
+# $Id: AdminSysConfig.dtl,v 1.12.2.1 2007-02-26 14:24:02 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -72,6 +72,7 @@
 
       <br>
 
+<!-- dtl:block:Download -->
       <form action="$Env{"CGIHandle"}" method="get">
         <input type="hidden" name="Action" value="$Env{"Action"}">
         <input type="hidden" name="Subaction" value="Download">
@@ -98,6 +99,7 @@
       </form>
 
       <br>
+<!-- dtl:block:Download -->
 
       <form action="$Env{"CGIHandle"}" method="post" enctype="multipart/form-data">
         <input type="hidden" name="Action" value="$Env{"Action"}">
